Re-applying modernization, deprecated code updates.